packages/kontinuous/tests/__snapshots__/hasura-no-ing.prod.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test build manifests with snapshots hasura-no-ing.prod 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: '1234'
    kontinuous/gitBranch: feature-branch-1
    kontinuous/mainNamespace: 'true'
    kapp.k14s.io/exists: ''
    kontinuous/chartPath: project.fabrique.contrib.rancher-namespace
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/rancher-namespace/templates/namespace.yaml
  labels:
    application: test-hasura-no-ing
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: namespace-4wnyh3
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
  name: test-hasura-no-ing
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-hasura-no-ing
  annotations:
    kontinuous/chartPath: project.fabrique.contrib.security-policies
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/security-policies/templates/network-policy.yml
    kapp.k14s.io/disable-original: ''
  labels:
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: networkpolicy-49u3gn-netpol-ingress
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
spec:
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: ingress-controller
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: monitoring
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: hasura
    application: test-hasura-no-ing
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: service-5cfizy-hasura
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
  name: hasura
  namespace: test-hasura-no-ing
  annotations:
    kontinuous/chartPath: project.fabrique.contrib.hasura
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/hasura/templates/service.yaml
    kapp.k14s.io/disable-original: ''
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    component: hasura
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: hasura
    application: test-hasura-no-ing
    kontinuous/ref: feature-branch-1
    kontinuous/resourceName: deployment-3d60sq-hasura
    app.kubernetes.io/manifest-managed-by: kontinuous
    app.kubernetes.io/manifest-created-by: kontinuous
  name: hasura
  namespace: test-hasura-no-ing
  annotations:
    kontinuous/chartPath: project.fabrique.contrib.hasura
    kontinuous/source: >-
      project/charts/fabrique/charts/contrib/charts/hasura/templates/deployment.yaml
    kapp.k14s.io/disable-original: ''
    kapp.k14s.io/create-strategy: fallback-on-update
    kapp.k14s.io/update-strategy: fallback-on-replace
    kapp.k14s.io/nonce: ''
    kontinuous/depname.full: project.fabrique.contrib.hasura.deployment.hasura
    kontinuous/depname.chartResource: hasura.deployment.hasura
    kontinuous/depname.chartName: hasura
    kontinuous/depname.chartPath: project.fabrique.contrib.hasura
    kontinuous/depname.resourcePath: deployment.hasura
    kontinuous/depname.resourceName: hasura
    kapp.k14s.io/change-group.hasura: kontinuous/hasura
    kapp.k14s.io/change-group.project.fabrique.contrib.hasura: kontinuous/project.fabrique.contrib.hasura
    kapp.k14s.io/change-group.project.fabrique.contrib.hasura.deployment.hasura: kontinuous/project.fabrique.contrib.hasura.deployment.hasura
    kapp.k14s.io/change-group.project.fabrique.contrib.hasura.hasura: kontinuous/project.fabrique.contrib.hasura.hasura
    kapp.k14s.io/change-group.hasura.deployment.hasura: kontinuous/hasura.deployment.hasura
    kapp.k14s.io/change-group.hasura.hasura: kontinuous/hasura.hasura
    kapp.k14s.io/change-group.deployment.hasura: kontinuous/deployment.hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hasura
  template:
    metadata:
      labels:
        component: hasura
        application: test-hasura-no-ing
        kontinuous/ref: feature-branch-1
        kontinuous/resourceName: deployment-3d60sq-hasura
        app.kubernetes.io/manifest-managed-by: kontinuous
        app.kubernetes.io/manifest-created-by: kontinuous
    spec:
      containers:
        - image: harbor.fabrique.social.gouv.fr/test-hasura-no-ing/hasura:prod
          livenessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: hasura
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 1280Mi
            requests:
              cpu: 50m
              memory: 128Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          env: []
          envFrom: []
